--- a/cfg/Tuning.cfg
+++ b/cfg/Tuning.cfg
@@ -9,12 +9,15 @@ gen = ParameterGenerator()
 gen.add("enable", bool_t, 0, "save the crop cloud ", False)
 gen.add("quaternion_enable", bool_t, 0, "axis of map orientaion", False)
 gen.add("map_enable", bool_t, 0, "Tuning map data", False)
+gen.add("flip_enable", bool_t, 0, "flipping map data", False)
+gen.add("save_enable", bool_t, 0, "save point cloud data", False)
 
-gen.add("scale_x", double_t, 2, "Scale the x of each point", 1.0, -1.0, 1.0)
-gen.add("scale_y_min", double_t, 2, "Scale the y of each point", 1.0, -1.0, 1.0)
-gen.add("scale_y_max", double_t, 2, "Scale the z of each point", 1.0, -1.0, 1.0)
-gen.add("scale_z_min", double_t, 2, "Scale the y of each point", 1.0, -1.0, 1.0)
-gen.add("scale_z_max", double_t, 2, "Scale the z of each point", 1.0, -1.0, 1.0)
+gen.add("scale_x_min", double_t, 2, "Scale the x of each point", 0.0, -1.0, 1.0)
+gen.add("scale_x_max", double_t, 2, "Scale the x of each point", 0.0, 0.0, 3.0)
+gen.add("scale_y_min", double_t, 2, "Scale the y of each point", 0.0, -1.0, 1.0)
+gen.add("scale_y_max", double_t, 2, "Scale the z of each point", 0.0, -1.0, 1.0)
+gen.add("scale_z_min", double_t, 2, "Scale the y of each point", 0.0, -1.0, 1.0)
+gen.add("scale_z_max", double_t, 2, "Scale the z of each point", 0.0, -1.0, 1.0)
 
 gen.add("orientation_x_x", double_t, 2, "Quat_x", 1.0, -1.0, 1.0)
 gen.add("orientation_y_y", double_t, 2, "Quat_y", 1.0, -1.0, 1.0)
